--- a/program.html
+++ b/program.html
@@ -17,9 +17,15 @@
                 <li><button id="btnLine">Line</button></li>
                 <li><button id="btnCircle">Circle</button></li>
                 <li><button id="btnPath">Path</button></li>
+                <li><button id="btnTriangle">Triangle</button></li>
+
 
                 <li id="trackX"></li>
                 <li id="trackY"></li>
+
+                <p>Choose your color</p>
+                <input type="color">
+
             </ul>
         </nav>
         <main></main>
