changed triangle button to psychedelic triangle

--- a/program.html
+++ b/program.html
@@ -17,7 +17,7 @@
                 <li><button id="btnLine">Line</button></li>
                 <li><button id="btnCircle">Circle</button></li>
                 <li><button id="btnPath">Path</button></li>
-                <li><button id="btnTriangle">Triangle</button></li>
+                <li><button id="btnTriangle">Psychedelic Triangle</button></li>
 
 
                 <li id="trackX"></li>
